--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
 h1 {
   text-align: center;
 }
+
+#canvas {
+
+  border: 1px solid black;
+  background: rgb(245, 245, 245);
+  display: block;
+  margin: auto;
+}
